refactored for Swagger spec
