# swagger.yaml
@@ -1,13 +1,170 @@
 basePath: /
 consumes:
 - application/json
+definitions:
+  GenericError:
+    description: GenericError is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/Ahmad-Faizan/go-web-api/handlers
+  Product:
+    description: Product defines the structure of a sample product
+    properties:
+      desc:
+        description: the description for this poduct
+        maxLength: 1000
+        type: string
+        x-go-name: Description
+      id:
+        description: the id for this product
+        format: int64
+        minimum: 1
+        type: integer
+        x-go-name: ID
+      name:
+        description: the name for this product
+        maxLength: 255
+        type: string
+        x-go-name: Name
+      price:
+        description: the price for the product
+        format: int64
+        minimum: 1
+        type: integer
+        x-go-name: Price
+      sku:
+        description: the SKU for the product
+        pattern: '[0-9]+-[0-9]+-[0-9]+'
+        type: string
+        x-go-name: SKU
+    required:
+    - name
+    - sku
+    - price
+    type: object
+    x-go-package: github.com/Ahmad-Faizan/go-web-api/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/Ahmad-Faizan/go-web-api/handlers
 info:
   description: Documentation for a simple coffee shop REST API.
   title: Coffee Shop API.
   version: 1.0.0
-paths: {}
+paths:
+  /products:
+    get:
+      description: Return a list of products from the database
+      operationId: getProducts
+      responses:
+        "200":
+          $ref: '#/responses/productsResponse'
+      tags:
+      - products
+    post:
+      description: Creates a new product
+      operationId: createProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "500":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update the details of a product
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Deletes a product by id
+      operationId: deleteProduct
+      responses:
+        "204":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "500":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a single product from the database
+      operationId: getSingleProduct
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
 produces:
 - application/json
+responses:
+  errorResponse:
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  noContentResponse:
+    description: No content is returned by this API endpoint
+  productResponse:
+    description: Data structure representing a single product
+    schema:
+      $ref: '#/definitions/Product'
+  productsResponse:
+    description: A list of products
+    schema:
+      items:
+        $ref: '#/definitions/Product'
+      type: array
 schemes:
 - http
 swagger: "2.0"
